--- a/packages/components/src/Checkbox/Checkbox.mdx
+++ b/packages/components/src/Checkbox/Checkbox.mdx
@@ -13,8 +13,7 @@ import { useState } from "react";
 
 <ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
-Checkboxes let a user select one or more items from a set of options. If you are
-intending to turn a setting on or off consider a [Switch](switch) instead.
+A checkbox lets a user select one or more items from a set of options.
 
 ```ts
 import { Checkbox } from "@jobber/components/Checkbox";
@@ -32,6 +31,13 @@ import { Checkbox } from "@jobber/components/Checkbox";
     );
   }}
 </Playground>
+
+## Design & Usage Guidelines
+
+A checkbox is a familiar pattern for users who need to choose from a set of options, or opt in to a single choice.
+
+A single checkbox, a [Switch](switch), and a pair of [radio buttons](radio-group) can seem similar in theory, as all can represent an either/or decision for the user. Use a switch when the user must make a decision to turn something on or off, and a single checkbox when a user is opting in to a choice. A pair of radio buttons can be used to help the user decide between two discrete options, such as “fixed price” and “per visit” invoicing options.
+
 
 ## Props
 
