test to open and not show lightbox

--- a/packages/components/src/LightBox/LightBox.mdx
+++ b/packages/components/src/LightBox/LightBox.mdx
@@ -28,7 +28,7 @@ import { LightBox } from "@jobber/components/LightBox";
     const [open, isOpen] = useState(false);
     return (
       <>
-        <Button label="😈" onClick={() => isOpen(true)} />
+        <Button label="😈 Click me!" onClick={() => isOpen(true)} />
         <LightBox
           open={open}
           images={[
