handle one image and controls

--- a/packages/components/src/LightBox/LightBox.mdx
+++ b/packages/components/src/LightBox/LightBox.mdx
@@ -55,11 +55,10 @@ import { LightBox } from "@jobber/components/LightBox";
 
 ## Design & Usage Guidelines
 
-When contributing to, or consuming the LightBox component, consider the
-following:
+A lightbox should:
 
-- This is a wrapper of a third party library. The underlying library may already
-  include the functionality you are looking to add.
+- Resemble the industry standard lightbox, using Jobber's font and color
+  palette. Novel lightbox functionality will surprise and confuse users.
 
 ## Props
 
