matching jobbers style for modals

--- a/packages/components/src/LightBox/LightBox.mdx
+++ b/packages/components/src/LightBox/LightBox.mdx
@@ -33,9 +33,9 @@ import { LightBox } from "@jobber/components/LightBox";
           open={open}
           images={[
             {
-              title: "😃",
+              title: "😃 Happy Face",
               url: "https://i.imgur.com/6Jcfgnp.jpg",
-              caption: "Happy face"
+              caption: "This is a happy face"
             },
             {
               title: "😮",
