update to inline link

--- a/packages/components/src/LightBox/LightBox.mdx
+++ b/packages/components/src/LightBox/LightBox.mdx
@@ -19,9 +19,8 @@ user clicks on a control and is shown a carousel style presentation of the
 defined images.
 
 This component is a wrapper of the frontend-collective's react-image-lightbox
-third party library.
-<a href="https://github.com/frontend-collective/react-image-lightbox">React
-Image Lightbox</a>
+third party library. This component is a wrapper of the
+[frontend-collective's react-image-lightbox](https://github.com/frontend-collective/react-image-lightbox).
 
 ```ts
 import { LightBox } from "@jobber/components/LightBox";
