--- a/packages/design/README.mdx
+++ b/packages/design/README.mdx
@@ -4,6 +4,8 @@ menu: Packages
 route: /design
 ---
 
+### Need to update this to include icons
+
 # Foundation
 
 Foundational colors and rhythm for the Jobber Atlantis Design System
