--- a/packages/design/README.mdx
+++ b/packages/design/README.mdx
@@ -4,7 +4,7 @@ menu: Packages
 route: /design
 ---
 
-### Need to update this to include icons
+### Need to update this to include icons.
 
 # Foundation
 
