--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -217,25 +217,44 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="paidInvoice" />  | `paidInvoice`  |
 | <Icon name="sendInvoice" />  | `sendInvoice`  |
 
+## Fleet management
+
+| Icon                   | `Name`   |
+| :--------------------- | :------- |
+| <Icon name="truck" />  | `truck`  |
+| <Icon name="fuel" />   | `fuel`   |
+| <Icon name="engine" /> | `engine` |
+
+## System actions
+
+| Icon                      | `Name`      |
+| :------------------------ | :---------- |
+| <Icon name="add" />       | `add`       |
+| <Icon name="batch" />     | `batch`     |
+| <Icon name="copy" />      | `copy`      |
+| <Icon name="customize" /> | `customize` |
+| <Icon name="download" />  | `download`  |
+| <Icon name="embed" />     | `embed`     |
+| <Icon name="export" />    | `export`    |
+| <Icon name="import" />    | `import`    |
+| <Icon name="redo" />      | `redo`      |
+| <Icon name="remove" />    | `remove`    |
+| <Icon name="search" />    | `search`    |
+| <Icon name="sort" />      | `sort`      |
+| <Icon name="sync" />      | `sync`      |
+
 ## Other
 
 | Icon                       | `Name`       |
 | :------------------------- | :----------- |
-| <Icon name="add" />        | `add`        |
-| <Icon name="batch" />      | `batch`      |
 | <Icon name="camera" />     | `camera`     |
 | <Icon name="checkmark" />  | `checkmark`  |
 | <Icon name="cog" />        | `cog`        |
-| <Icon name="customize" />  | `customize`  |
 | <Icon name="dashboard" />  | `dashboard`  |
-| <Icon name="download" />   | `download`   |
-| <Icon name="embed" />      | `embed`      |
-| <Icon name="export" />     | `export`     |
 | <Icon name="eye" />        | `eye`        |
 | <Icon name="eyeCrossed" /> | `eyeCrossed` |
 | <Icon name="gift" />       | `gift`       |
 | <Icon name="grid" />       | `grid`       |
-| <Icon name="import" />     | `import`     |
 | <Icon name="link" />       | `link`       |
 | <Icon name="lock" />       | `lock`       |
 | <Icon name="logout" />     | `logout`     |
@@ -243,18 +262,12 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="more" />       | `more`       |
 | <Icon name="phone" />      | `phone`      |
 | <Icon name="quickbooks" /> | `quickbooks` |
-| <Icon name="redo" />       | `redo`       |
-| <Icon name="remove" />     | `remove`     |
 | <Icon name="reports" />    | `reports`    |
-| <Icon name="search" />     | `search`     |
-| <Icon name="sort" />       | `sort`       |
 | <Icon name="starburst" />  | `starburst`  |
 | <Icon name="sun" />        | `sun`        |
-| <Icon name="sync" />       | `sync`       |
 | <Icon name="thumbsUp" />   | `thumbsUp`   |
 | <Icon name="thumbsDown" /> | `thumbsDown` |
 | <Icon name="xero" />       | `xero`       |
-| <Icon name="truck" />      | `truck`      |
 
 ## Legacy
 
