--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -62,7 +62,9 @@ import { Icon } from "@jobber/components/Icon";
 
 ---
 
-## Arrows
+## Available icons
+
+### Arrows
 
 | Icon                          | `Name`          |
 | :---------------------------- | :-------------- |
@@ -74,7 +76,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="longArrowDown" /> | `longArrowDown` |
 | <Icon name="longArrowUp" />   | `longArrowUp`   |
 
-## Calendar
+### Calendar
 
 | Icon                         | `Name`         |
 | :--------------------------- | :------------- |
@@ -86,7 +88,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="task" />         | `task`         |
 | <Icon name="timeline" />     | `timeline`     |
 
-## Files
+### Files
 
 | Icon                    | `Name`    |
 | :---------------------- | :-------- |
@@ -100,7 +102,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="word" />    | `word`    |
 | <Icon name="upload" />  | `upload`  |
 
-## Forms
+### Forms
 
 | Icon                      | `Name`      |
 | :------------------------ | :---------- |
@@ -113,7 +115,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="dropdown" />  | `dropdown`  |
 | <Icon name="trash" />     | `trash`     |
 
-## Help
+### Help
 
 | Icon                  | `Name`  |
 | :-------------------- | :------ |
@@ -121,7 +123,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="help" />  | `help`  |
 | <Icon name="knot" />  | `knot`  |
 
-## Map
+### Map
 
 | Icon                       | `Name`       |
 | :------------------------- | :----------- |
@@ -129,7 +131,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="moveMarker" /> | `moveMarker` |
 | <Icon name="property" />   | `property`   |
 
-## Messaging
+### Messaging
 
 | Icon                     | `Name`     |
 | :----------------------- | :--------- |
@@ -140,7 +142,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="sms" />      | `sms`      |
 | <Icon name="sms2" />     | `sms2`     |
 
-## User
+### User
 
 | Icon                           | `Name`           |
 | :----------------------------- | :--------------- |
@@ -151,7 +153,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="userUnassigned" /> | `userUnassigned` |
 | <Icon name="vcard" />          | `vcard`          |
 
-## Social media
+### Social media
 
 | Icon                       | `Name`       |
 | :------------------------- | :----------- |
@@ -166,7 +168,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="youtube" />    | `youtube`    |
 | <Icon name="embed" />      | `embed`      |
 
-## Transaction
+### Transaction
 
 | Icon                    | `Name`    |
 | :---------------------- | :-------- |
@@ -174,7 +176,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="percent" /> | `percent` |
 | <Icon name="wallet" />  | `wallet`  |
 
-## Work
+### Work
 
 | Icon                     | `Name`     |
 | :----------------------- | :--------- |
@@ -185,19 +187,19 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="timer" />    | `timer`    |
 | <Icon name="work" />     | `work`     |
 
-## Request
+### Request
 
 | Icon                    | `Name`    |
 | :---------------------- | :-------- |
 | <Icon name="request" /> | `request` |
 
-## Quote
+### Quote
 
 | Icon                  | `Name`  |
 | :-------------------- | :------ |
 | <Icon name="quote" /> | `quote` |
 
-## Job
+### Job
 
 | Icon                       | `Name`       |
 | :------------------------- | :----------- |
@@ -206,7 +208,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="moveVisits" /> | `moveVisits` |
 | <Icon name="visit" />      | `visit`      |
 
-## Invoice
+### Invoice
 
 | Icon                         | `Name`         |
 | :--------------------------- | :------------- |
@@ -216,7 +218,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="paidInvoice" />  | `paidInvoice`  |
 | <Icon name="sendInvoice" />  | `sendInvoice`  |
 
-## Fleet management
+### Fleet management
 
 | Icon                   | `Name`   |
 | :--------------------- | :------- |
@@ -224,7 +226,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="fuel" />   | `fuel`   |
 | <Icon name="engine" /> | `engine` |
 
-## System actions
+### System actions
 
 | Icon                      | `Name`      |
 | :------------------------ | :---------- |
@@ -242,7 +244,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="sort" />      | `sort`      |
 | <Icon name="sync" />      | `sync`      |
 
-## Other
+### Other
 
 | Icon                       | `Name`       |
 | :------------------------- | :----------- |
@@ -268,7 +270,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="thumbsDown" /> | `thumbsDown` |
 | <Icon name="xero" />       | `xero`       |
 
-## Legacy
+### Legacy
 
 | Icon                   | `Name`   |
 | :--------------------- | :------- |
