feat(components): update icons (#257)
* update icon JSON

* update docs

- add system actions and fleet management categories

* align tables

* update hierarchy

--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -62,7 +62,9 @@ import { Icon } from "@jobber/components/Icon";
 
 ---
 
-## Arrows
+## Available icons
+
+### Arrows
 
 | Icon                          | `Name`          |
 | :---------------------------- | :-------------- |
@@ -74,7 +76,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="longArrowDown" /> | `longArrowDown` |
 | <Icon name="longArrowUp" />   | `longArrowUp`   |
 
-## Calendar
+### Calendar
 
 | Icon                         | `Name`         |
 | :--------------------------- | :------------- |
@@ -86,7 +88,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="task" />         | `task`         |
 | <Icon name="timeline" />     | `timeline`     |
 
-## Files
+### Files
 
 | Icon                    | `Name`    |
 | :---------------------- | :-------- |
@@ -100,7 +102,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="word" />    | `word`    |
 | <Icon name="upload" />  | `upload`  |
 
-## Forms
+### Forms
 
 | Icon                      | `Name`      |
 | :------------------------ | :---------- |
@@ -113,7 +115,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="dropdown" />  | `dropdown`  |
 | <Icon name="trash" />     | `trash`     |
 
-## Help
+### Help
 
 | Icon                  | `Name`  |
 | :-------------------- | :------ |
@@ -121,7 +123,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="help" />  | `help`  |
 | <Icon name="knot" />  | `knot`  |
 
-## Map
+### Map
 
 | Icon                       | `Name`       |
 | :------------------------- | :----------- |
@@ -129,7 +131,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="moveMarker" /> | `moveMarker` |
 | <Icon name="property" />   | `property`   |
 
-## Messaging
+### Messaging
 
 | Icon                     | `Name`     |
 | :----------------------- | :--------- |
@@ -140,7 +142,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="sms" />      | `sms`      |
 | <Icon name="sms2" />     | `sms2`     |
 
-## User
+### User
 
 | Icon                           | `Name`           |
 | :----------------------------- | :--------------- |
@@ -151,7 +153,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="userUnassigned" /> | `userUnassigned` |
 | <Icon name="vcard" />          | `vcard`          |
 
-## Social media
+### Social media
 
 | Icon                       | `Name`       |
 | :------------------------- | :----------- |
@@ -166,7 +168,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="youtube" />    | `youtube`    |
 | <Icon name="embed" />      | `embed`      |
 
-## Transaction
+### Transaction
 
 | Icon                    | `Name`    |
 | :---------------------- | :-------- |
@@ -174,7 +176,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="percent" /> | `percent` |
 | <Icon name="wallet" />  | `wallet`  |
 
-## Work
+### Work
 
 | Icon                     | `Name`     |
 | :----------------------- | :--------- |
@@ -185,20 +187,19 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="timer" />    | `timer`    |
 | <Icon name="work" />     | `work`     |
 
-## Request
+### Request
 
 | Icon                    | `Name`    |
 | :---------------------- | :-------- |
 | <Icon name="request" /> | `request` |
 
-## Quote
+### Quote
 
-| Icon                      | `Name`      |
-| :------------------------ | :---------- |
-| <Icon name="quote" />     | `quote`     |
-| <Icon name="quoteCopy" /> | `quoteCopy` |
+| Icon                  | `Name`  |
+| :-------------------- | :------ |
+| <Icon name="quote" /> | `quote` |
 
-## Job
+### Job
 
 | Icon                       | `Name`       |
 | :------------------------- | :----------- |
@@ -207,7 +208,7 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="moveVisits" /> | `moveVisits` |
 | <Icon name="visit" />      | `visit`      |
 
-## Invoice
+### Invoice
 
 | Icon                         | `Name`         |
 | :--------------------------- | :------------- |
@@ -217,25 +218,44 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="paidInvoice" />  | `paidInvoice`  |
 | <Icon name="sendInvoice" />  | `sendInvoice`  |
 
-## Other
+### Fleet management
+
+| Icon                   | `Name`   |
+| :--------------------- | :------- |
+| <Icon name="truck" />  | `truck`  |
+| <Icon name="fuel" />   | `fuel`   |
+| <Icon name="engine" /> | `engine` |
+
+### System actions
+
+| Icon                      | `Name`      |
+| :------------------------ | :---------- |
+| <Icon name="add" />       | `add`       |
+| <Icon name="batch" />     | `batch`     |
+| <Icon name="copy" />      | `copy`      |
+| <Icon name="customize" /> | `customize` |
+| <Icon name="download" />  | `download`  |
+| <Icon name="embed" />     | `embed`     |
+| <Icon name="export" />    | `export`    |
+| <Icon name="import" />    | `import`    |
+| <Icon name="redo" />      | `redo`      |
+| <Icon name="remove" />    | `remove`    |
+| <Icon name="search" />    | `search`    |
+| <Icon name="sort" />      | `sort`      |
+| <Icon name="sync" />      | `sync`      |
+
+### Other
 
 | Icon                       | `Name`       |
 | :------------------------- | :----------- |
-| <Icon name="add" />        | `add`        |
-| <Icon name="batch" />      | `batch`      |
 | <Icon name="camera" />     | `camera`     |
 | <Icon name="checkmark" />  | `checkmark`  |
 | <Icon name="cog" />        | `cog`        |
-| <Icon name="customize" />  | `customize`  |
 | <Icon name="dashboard" />  | `dashboard`  |
-| <Icon name="download" />   | `download`   |
-| <Icon name="embed" />      | `embed`      |
-| <Icon name="export" />     | `export`     |
 | <Icon name="eye" />        | `eye`        |
 | <Icon name="eyeCrossed" /> | `eyeCrossed` |
 | <Icon name="gift" />       | `gift`       |
 | <Icon name="grid" />       | `grid`       |
-| <Icon name="import" />     | `import`     |
 | <Icon name="link" />       | `link`       |
 | <Icon name="lock" />       | `lock`       |
 | <Icon name="logout" />     | `logout`     |
@@ -243,20 +263,14 @@ import { Icon } from "@jobber/components/Icon";
 | <Icon name="more" />       | `more`       |
 | <Icon name="phone" />      | `phone`      |
 | <Icon name="quickbooks" /> | `quickbooks` |
-| <Icon name="redo" />       | `redo`       |
-| <Icon name="remove" />     | `remove`     |
 | <Icon name="reports" />    | `reports`    |
-| <Icon name="search" />     | `search`     |
-| <Icon name="sort" />       | `sort`       |
 | <Icon name="starburst" />  | `starburst`  |
 | <Icon name="sun" />        | `sun`        |
-| <Icon name="sync" />       | `sync`       |
 | <Icon name="thumbsUp" />   | `thumbsUp`   |
 | <Icon name="thumbsDown" /> | `thumbsDown` |
 | <Icon name="xero" />       | `xero`       |
-| <Icon name="truck" />      | `truck`      |
 
-## Legacy
+### Legacy
 
 | Icon                   | `Name`   |
 | :--------------------- | :------- |
