Get the type working

--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -23,6 +23,8 @@ import { Button } from "@jobber/components/Button";
 <Playground>
   <Button
     label="Submit"
+    ariaHaspopup={true}
+    id="EDDY"
     onClick={() => {
       alert("✅");
     }}
@@ -215,7 +217,7 @@ that the url will change to the appropriate route.
   {() => {
     return (
       <Router basename="/components/button">
-        <Button label="Home" to="/" />
+        <Button label="Home" to="/" id="EDDY" />
         <Button label="Office" to="/office" />
         <Button label="Dentist" to="/dentist" />
         <hr />
