feat(components): Add routing Link to Button (#259)
* Adds link to button

* add correct tagProps to Link

* Add description to props and mdx

* Tests for routing a button

* Remove some unused components from mdx

* Adds types for react-router-dom

* Adds types for react-router-dom

* Get the type working

* Clean up the button work

* Move tests to snapshots

--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -6,6 +6,7 @@ route: /components/button
 
 import { Playground, Props } from "docz";
 import { ComponentStatus } from "@jobber/docx";
+import { BrowserRouter as Router, Switch, Route } from "react-router-dom";
 import { Button } from ".";
 
 # Button
@@ -202,4 +203,34 @@ A way to communicate to the user that a background action is being performed.
     loading={true}
   />
   <Button label="Canceling..." variation="cancel" loading={true} />
+</Playground>
+
+## Client Side Routing
+
+A `Button` can be used for client side routing as well. When using a Button to
+handle the client side routing, use the `to` prop. Notice when you click below
+that the url will change to the appropriate route.
+
+<Playground>
+  {() => {
+    return (
+      <Router basename="/components/button">
+        <Button label="Home" to="/" />
+        <Button label="Office" to="/office" />
+        <Button label="Dentist" to="/dentist" />
+        <hr />
+        <Switch>
+          <Route exact path="/">
+            This is my home, time to get cozy.
+          </Route>
+          <Route exact path="/office">
+            This is my office, time to get to work.
+          </Route>
+          <Route exact path="/dentist">
+            This is the dentist, time to get my teeth fixed.
+          </Route>
+        </Switch>
+      </Router>
+    );
+  }}
 </Playground>
