update playground headers

--- a/packages/components/src/Table/Table.mdx
+++ b/packages/components/src/Table/Table.mdx
@@ -36,8 +36,8 @@ import { Table, Header, Footer, Row, Cell } from "@jobber/components/Table";
     <Header>
       <Cell>Ship</Cell>
       <Cell>Class</Cell>
-      <Cell>Cost</Cell>
-      <Cell>Crew</Cell>
+      <Cell align="right">Cost</Cell>
+      <Cell align="right">Crew</Cell>
     </Header>
     <Row>
       <Cell>Nostromo</Cell>
