Update styles for icon only button

--- a/packages/components/src/Button/Button.mdx
+++ b/packages/components/src/Button/Button.mdx
@@ -176,6 +176,7 @@ You can use icons inside buttons. They can stand-alone, or appear before, after,
 or on top of the button label. They can also be added before or after the label.
 
 <Playground>
+  <Button type="secondary" icon="person" />
   <Button label="More" type="secondary" icon="more" />
   <Button
     label="Actions"
