--- a/packages/components/src/Tooltip/Tooltip.mdx
+++ b/packages/components/src/Tooltip/Tooltip.mdx
@@ -12,10 +12,10 @@ import { Card } from "../Card";
 
 # Tooltip
 
-<ComponentStatus stage="rc" responsive="yes" accessible="yes" />
+<ComponentStatus stage="rc" responsive="yes" accessible="no" />
 
-Tooltips provide in-context information that briefly explain the function of a UI
-element.
+Tooltips provide in-context information that briefly explain the function of a
+UI element.
 
 `Tooltip` will apply a tooltip to a single wrapped Element.
 
@@ -34,15 +34,30 @@ import { Tooltip } from "@jobber/components/Tooltip";
 
 ## Design & Usage Guidelines
 
-When contributing to, or consuming the Tooltip component, consider the following:
+When contributing to, or consuming the Tooltip component, consider the
+following:
 
 ### Usage
-- A tooltip should be used to introduce a novel UI element or highlight a change to an existing interface.
-- A tooltip should contain information that is helpful, but not necessary for the user to successfully interact with the page.
+
+- A tooltip should be used to introduce a novel UI element or highlight a change
+  to an existing interface.
+- A tooltip should contain information that is helpful, but not necessary for
+  the user to successfully interact with the page.
 
 ### Content
+
 - Tooltip content should consist of only text and an optional "dismiss" CTA
 - Tooltip text content should not exceed 3 lines
+
+## Deficiencies
+
+### Accessibility
+
+- Hover content should show when the target element is focused. In order to make
+  tooltip content available to those users who don't use a mouse (keyboard only,
+  mobile, etc.) the Tooltip component should show its content when the child
+  element has focus. More info:
+  [WCAG 2.1 Content on Hover or Focus](https://www.w3.org/TR/WCAG21/#content-on-hover-or-focus)
 
 ## Props
 
