fix page hierarchy

--- a/packages/components/src/Card/Card.mdx
+++ b/packages/components/src/Card/Card.mdx
@@ -52,9 +52,9 @@ A card should be the smallest-possible self-contained section of content. If you
 
 ---
 
-# Usage
+## Usage
 
-## Clickable with URL
+### Clickable with URL
 
 <Playground>
   <Card url="#">
@@ -67,7 +67,7 @@ A card should be the smallest-possible self-contained section of content. If you
   </Card>
 </Playground>
 
-## Clickable with onClick
+### Clickable with onClick
 
 <Playground>
   <Card
