update content page hierarchy

--- a/packages/components/src/Content/Content.mdx
+++ b/packages/components/src/Content/Content.mdx
@@ -60,9 +60,9 @@ Content should be used whenever you have a container with mixed content that req
 
 ---
 
-# Usage
+## Usage
 
-## Within Cards
+### Within Cards
 
 <Playground>
   <Card title="About me">
