--- a/packages/components/src/FeatureSwitch/FeatureSwitch.mdx
+++ b/packages/components/src/FeatureSwitch/FeatureSwitch.mdx
@@ -14,7 +14,7 @@ import { useState } from "react";
 
 <ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
-Use the Feature Switch to allow users to control a feature. The Feature Switch should tell the user what the feature is, allow them to turn it on and off, and optionally allow them to edit any options applicable to the feature.
+Use the Feature Switch to give users control over a settings-level feature. The Feature Switch should tell the user what the feature is, allow them to turn it on and off, and optionally allow them to edit any options applicable to the feature.
 
 ```ts
 import { FeatureSwitch } from "@jobber/components/FeatureSwitch";
