Update DescriptionList docs

--- a/packages/components/src/DescriptionList/DescriptionList.mdx
+++ b/packages/components/src/DescriptionList/DescriptionList.mdx
@@ -28,6 +28,12 @@ import { DescriptionList } from "@jobber/components/DescriptionList";
 
 <Props of={DescriptionList} />
 
+## Design & Usage Guidelines
+
+The Description List is a great solution when you have a small list of information with a 1:1 label-to-data relationship. For example, the issued and due dates on an invoice, or the job type, billing type and duration of a job.
+
+To list more complex collections of information, you may want to consider the [List](https://atlantis.getjobber.com/components/list) component. If you want to allow the user to compare data across items, consider using [Table](https://atlantis.getjobber.com/components/table).
+
 ---
 
 ## Passing an Element
