--- a/packages/components/src/InputNumber/InputNumber.mdx
+++ b/packages/components/src/InputNumber/InputNumber.mdx
@@ -24,6 +24,15 @@ import { InputNumber } from "@jobber/components/InputNumber";
   <InputNumber defaultValue={7} max={11} min={0} placeholder="Volume" />
 </Playground>
 
+## Design Usage & Guidelines
+
+This is best suited for input data that benefits from being modified in
+increments, such as quantity, price, or days (ie 2 days -> 3 days).
+
+While some types of data may technically be numbers, they can be ill-suited 
+for using a number input. For example, phone numbers and credit card numbers
+provide no value to the user by offering an incrementer. 
+
 ## Props
 
 <Props of={InputNumber} />
