rework menu to use custom breakpoints

--- a/packages/design/src/ResponsiveBreakpoints.mdx
+++ b/packages/design/src/ResponsiveBreakpoints.mdx
@@ -32,9 +32,9 @@ clarity when reading.
 ## Usage
 
 ```css
-/** Small screens **/
 .foo {
   ...;
+  /** small screens first **/
   padding: var(--space-base);
 
   @media (--medium-screens) {
