--- a/packages/components/src/FormatRelativeDateTime/FormatRelativeDateTime.mdx
+++ b/packages/components/src/FormatRelativeDateTime/FormatRelativeDateTime.mdx
@@ -13,8 +13,23 @@ import { FormatRelativeDateTime } from ".";
 
 <ComponentStatus stage="pre" responsive="yes" accessible="yes" />
 
-In Jobber a FormatDate is used to ensure that the date is displayed in the
-expected format. No text styling is applied, this simply formats the date.
+A FormatRelateDateTime displays the date and time using relative wording or
+approximate values.
+
+Rules: If the message was received less than an hour ago the format is x minutes
+ago
+
+If the message was received today, but more than an hour ago, the format becomes
+the time it was received
+
+If the message was received this within the last six days, the format is Sun,
+Mon, Tue, Wed, Thu, Fri, Sat
+
+If the message was received between six days ago and yesterday’s date one year
+previous, the format is Month Date
+
+If the message was received exactly one year ago or more than one year ago, the
+format is Month Day, Year
 
 ## Simple Example
 
