refactor(design): Move icons logic to @jobber/design (#256)
* move icons to jobber design

* use icons from jobber design

* update readme's

* update files for tarball payload

* update readme

* add test for getIcon

* define IconColorNames and IconSizes independent of the css file
Since we have a module declaration for all our css files on react native, we lost the types on the css files. This change helps React Native have access to the actual types

* add sourcemap config to rollup

* update jobber design readme to include icons

* export classNameMaps

* invert classNames mapping

* add height to icon sizes

* refactor get icon color

* merge master

* add generated file to prettierignore

--- a/packages/components/src/Checkbox/Checkbox.mdx
+++ b/packages/components/src/Checkbox/Checkbox.mdx
@@ -34,10 +34,15 @@ import { Checkbox } from "@jobber/components/Checkbox";
 
 ## Design & Usage Guidelines
 
-A checkbox is a familiar pattern for users who need to choose from a set of options, or opt in to a single choice.
+A checkbox is a familiar pattern for users who need to choose from a set of
+options, or opt in to a single choice.
 
-A single checkbox, a [Switch](switch), and a pair of [radio buttons](radio-group) can seem similar in theory, as all can represent an either/or decision for the user. Use a switch when the user must make a decision to turn something on or off, and a single checkbox when a user is opting in to a choice. A pair of radio buttons can be used to help the user decide between two discrete options, such as “fixed price” and “per visit” invoicing options.
-
+A single checkbox, a [Switch](switch), and a pair of
+[radio buttons](radio-group) can seem similar in theory, as all can represent an
+either/or decision for the user. Use a switch when the user must make a decision
+to turn something on or off, and a single checkbox when a user is opting in to a
+choice. A pair of radio buttons can be used to help the user decide between two
+discrete options, such as “fixed price” and “per visit” invoicing options.
 
 ## Props
 
