--- a/packages/components/src/Content/Content.mdx
+++ b/packages/components/src/Content/Content.mdx
@@ -18,7 +18,8 @@ import { Card } from "../Card";
 
 <ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
-Content is a container component which provides its' child elements with consistent vertical spacing and padding.
+Content is a container component which provides its' child elements with
+consistent vertical spacing and padding.
 
 ```ts
 import { Content } from "@jobber/components/Content";
@@ -52,7 +53,8 @@ import { Content } from "@jobber/components/Content";
 
 ## Design Usage & Guidelines
 
-Content should be used whenever you have a container with mixed content that requires consistent spacing between the elements.
+Content should be used whenever you have a container with mixed content that
+requires consistent spacing between the elements.
 
 ## Props
 
