--- a/packages/components/src/InputGroup/InputGroup.mdx
+++ b/packages/components/src/InputGroup/InputGroup.mdx
@@ -15,10 +15,10 @@ import { CivilTime } from "@std-proposal/temporal";
 
 <ComponentStatus stage="rc" responsive="no" accessible="yes" />
 
-Use InputGroup to show a visual relationship between related input fields. If a number of
-form fields, once submitted, make up a group of content (ie. an address, or first
-and last name becoming a full name, start and end times of an event) they are great 
-candidates for an InputGroup.
+Use InputGroup to show a visual relationship between related input fields. If a
+number of form fields, once submitted, make up a group of content (ie. an
+address, or first and last name becoming a full name, start and end times of an
+event) they are great candidates for an InputGroup.
 
 <Playground>
   <InputGroup flowDirection="horizontal">
