--- a/packages/components/src/Emphasis/Emphasis.mdx
+++ b/packages/components/src/Emphasis/Emphasis.mdx
@@ -12,9 +12,8 @@ import { Text } from "../Text";
 
 <ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
-Use this component to emphasize certain content of a Heading or Text
-component. There are variations on Emphasis, each with their own use 
-case and meaning.
+Use this component to emphasize certain content of a Heading or Text component.
+There are variations on Emphasis, each with their own use case and meaning.
 
 ```ts
 import { Emphasis } from "@jobber/components/Emphasis";
@@ -30,8 +29,9 @@ import { Emphasis } from "@jobber/components/Emphasis";
 
 ### Bold
 
-Used to call attention to a piece of text. Bold should indicate
-that its contents have [strong importance, seriousness, or urgency.](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/strong)
+Used to call attention to a piece of text. Bold should indicate that its
+contents have
+[strong importance, seriousness, or urgency.](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/strong)
 
 <Playground>
   <Text>
@@ -42,12 +42,13 @@ that its contents have [strong importance, seriousness, or urgency.](https://dev
 
 ### Italic
 
-Italic emphasis should be used when there is stress emphasis on a word (or words)
-which modifies the meaning of the sentence itself.
+Italic emphasis should be used when there is stress emphasis on a word (or
+words) which modifies the meaning of the sentence itself.
 
 <Playground>
   <Text>
-    Simon’s here to show <Emphasis variation="italic">you</Emphasis> how Jobber works.
+    Simon’s here to show <Emphasis variation="italic">you</Emphasis> how Jobber
+    works.
   </Text>
 </Playground>
 
