--- a/packages/components/src/FeatureSwitch/FeatureSwitch.mdx
+++ b/packages/components/src/FeatureSwitch/FeatureSwitch.mdx
@@ -14,7 +14,10 @@ import { useState } from "react";
 
 <ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
-Use the Feature Switch to give users control over a settings-level feature. The Feature Switch should tell the user what the feature is, allow them to turn it on and off, and optionally allow them to edit any options applicable to the feature.
+Use the Feature Switch to give users control over a settings-level feature. The
+Feature Switch should tell the user what the feature is, allow them to turn it
+on and off, and optionally allow them to edit any options applicable to the
+feature.
 
 ```ts
 import { FeatureSwitch } from "@jobber/components/FeatureSwitch";
@@ -45,9 +48,15 @@ import { FeatureSwitch } from "@jobber/components/FeatureSwitch";
 
 ## Design Usage and Guidelines
 
-The Feature Switch is intended to be used in Settings for features that apply to a system-wide experience. An example of this might be automated messaging settings, where the user needs to both decide whether or not to use a type of message, what the message template might be, and when the message should be sent.
+The Feature Switch is intended to be used in Settings for features that apply to
+a system-wide experience. An example of this might be automated messaging
+settings, where the user needs to both decide whether or not to use a type of
+message, what the message template might be, and when the message should be
+sent.
 
-If the user is making a per-use-case on/off decision, such as enabling automatic payments for a single invoice, use the [Switch](https://atlantis.getjobber.com/components/switch) component.
+If the user is making a per-use-case on/off decision, such as enabling automatic
+payments for a single invoice, use the
+[Switch](https://atlantis.getjobber.com/components/switch) component.
 
 ## Props
 
