--- a/packages/components/src/InlineLabel/InlineLabel.mdx
+++ b/packages/components/src/InlineLabel/InlineLabel.mdx
@@ -25,19 +25,19 @@ import { InlineLabel } from "@jobber/components/InlineLabel";
 
 ## Design Usage & Guidelines
 
-Inline labels can be used fairly broadly, but the application of [color](#colors)
-should be handled with intent. Use of colour along with a descriptive label
-can help the user understand the meaning of an item's status.
+Inline labels can be used fairly broadly, but the application of
+[color](#colors) should be handled with intent. Use of colour along with a
+descriptive label can help the user understand the meaning of an item's status.
 
-| Color                                                      | Meaning                        |
-| :--------------------------------------------------------- | :----------------------------- |
-|  <InlineLabel color="red">Past Due</InlineLabel>           | Time-sensitive urgent          |
-|  <InlineLabel color="orange">Unscheduled</InlineLabel>     | Urgent                         |    
-|  <InlineLabel color="green">Approved</InlineLabel>         | Ready to action on             |
-|  <InlineLabel color="teal">Converted</InlineLabel>         | Successful, no action required |
-|  <InlineLabel color="grey">Draft</InlineLabel>             | Object is in a draft state     |
-|  <InlineLabel color="blue">Archived</InlineLabel>          | Object has been archived       |
-|  <InlineLabel color="lightBlue">Sample</InlineLabel>       | Object is for learning purposes|
+| Color                                                 | Meaning                         |
+| :---------------------------------------------------- | :------------------------------ |
+| <InlineLabel color="red">Past Due</InlineLabel>       | Time-sensitive urgent           |
+| <InlineLabel color="orange">Unscheduled</InlineLabel> | Urgent                          |
+| <InlineLabel color="green">Approved</InlineLabel>     | Ready to action on              |
+| <InlineLabel color="teal">Converted</InlineLabel>     | Successful, no action required  |
+| <InlineLabel color="grey">Draft</InlineLabel>         | Object is in a draft state      |
+| <InlineLabel color="blue">Archived</InlineLabel>      | Object has been archived        |
+| <InlineLabel color="lightBlue">Sample</InlineLabel>   | Object is for learning purposes |
 
 ## Props
 
