--- a/packages/components/src/InputNumber/InputNumber.mdx
+++ b/packages/components/src/InputNumber/InputNumber.mdx
@@ -29,9 +29,9 @@ import { InputNumber } from "@jobber/components/InputNumber";
 This is best suited for input data that benefits from being modified in
 increments, such as quantity, price, or days (ie 2 days -> 3 days).
 
-While some types of data may technically be numbers, they can be ill-suited 
-for using a number input. For example, phone numbers and credit card numbers
-provide no value to the user by offering an incrementer. 
+While some types of data may technically be numbers, they can be ill-suited for
+using a number input. For example, phone numbers and credit card numbers provide
+no value to the user by offering an incrementer.
 
 ## Props
 
