--- a/packages/hooks/src/useResizeObserver.mdx
+++ b/packages/hooks/src/useResizeObserver.mdx
@@ -6,7 +6,7 @@ route: /hooks/use-resize-observer
 
 import { Playground } from "docz";
 import { useState } from "react";
-import { useResizeObserver } from "./useResizeObserver";
+import { useResizeObserver, defaultSizes } from "./useResizeObserver";
 import { Text } from "@jobber/components/Text";
 import { Card } from "@jobber/components/Card";
 import { Content } from "@jobber/components/Content";
@@ -26,10 +26,18 @@ import { useResizeObserver } from "@jobber/hooks";
       ref,
       { width, exactWidth, exactHeight, height }
     ] = useResizeObserver();
+    const currentWidth = Object.keys(defaultSizes).find(
+      key => defaultSizes[key] === width
+    );
+    const currentHeight = Object.keys(defaultSizes).find(
+      key => defaultSizes[key] === height
+    );
     return (
       <div ref={ref}>
-        <Card title={`I am a ${width} width & a ${height} height`}>
+        <Card title={`Width: ${currentWidth} | Height: ${currentHeight}`}>
           <Content>
+            <Text>Width: {width}</Text>
+            <Text>Height: {height}</Text>
             <Text>Exact Width: {exactWidth}</Text>
             <Text>Exact Height: {exactHeight}</Text>
           </Content>
@@ -49,3 +57,56 @@ to represent the `ref`. In the example below, we pass it the type of
 const [ref, { width, height }] = useResizeObserver<HTMLDivElement>();
 return <div ref={ref}>...</div>;
 ```
+
+## defaultSizes
+
+`useResizeObserver` exports an object of `defaultSizes`. This can be used for
+high level components such as `Page`
+
+```tsx
+import { defaultSizes } from "@jobber/hooks";
+```
+
+### The defaultSizes object:
+
+export function Sizes() {
+  return <code>{JSON.stringify(defaultSizes)}</code>;
+}
+
+<Sizes />
+
+## Custom Sizes
+
+`useResizeObserver` can take a custom `width` or `height` object if you do not
+want to use `defaultSizes`.
+
+<Playground>
+  {() => {
+    const customWidths = {
+      small: 480,
+      medium: 640,
+      large: 768
+    };
+    const [ref, { width, exactWidth }] = useResizeObserver({
+      width: customWidths
+    });
+    const currentWidth = Object.keys(customWidths).find(
+      key => customWidths[key] === width
+    );
+    return (
+      <div ref={ref}>
+        <Card title={`Width: ${currentWidth}`} accent={getAccent(currentWidth)}>
+          <Content>
+            <Text>Width: {width}</Text>
+            <Text>Exact Width: {exactWidth}</Text>
+          </Content>
+        </Card>
+      </div>
+    );
+    function getAccent(size) {
+      if (width < customWidths.medium) return "red";
+      if (width < customWidths.large) return "green";
+      return "indigo";
+    }
+  }}
+</Playground>
