--- a/packages/hooks/src/useResizeObserver.mdx
+++ b/packages/hooks/src/useResizeObserver.mdx
@@ -30,8 +30,8 @@ import { useResizeObserver } from "@jobber/hooks";
       <div ref={ref}>
         <Card title={`Check out my àçƈéñŦ`} accent={getAccent()}>
           <Content>
-            <Text>Width: {width}</Text>
-            <Text>Height: {height}</Text>
+            <Text>Width Step: {width}</Text>
+            <Text>Height Step: {height}</Text>
             <Text>Exact Width: {exactWidth}</Text>
             <Text>Exact Height: {exactHeight}</Text>
           </Content>
@@ -90,13 +90,13 @@ want to use `defaultSizes`.
       large: 768
     };
     const [ref, { width, exactWidth }] = useResizeObserver({
-      width: customWidths
+      widths: customWidths
     });
     return (
       <div ref={ref}>
         <Card title={`Width: ${getCurrentWidth()}`} accent={getAccent()}>
           <Content>
-            <Text>Width: {width}</Text>
+            <Text>Width Step: {width}</Text>
             <Text>Exact Width: {exactWidth}</Text>
           </Content>
         </Card>
