--- a/packages/hooks/src/useResizeObserver.mdx
+++ b/packages/hooks/src/useResizeObserver.mdx
@@ -79,7 +79,7 @@ export function Sizes() {
 
 ## Custom Sizes
 
-`useResizeObserver` can take a custom `width` or `height` object if you do not
+`useResizeObserver` can take a custom `widths` or `heights` object if you do not
 want to use `Breakpoints`.
 
 <Playground>
